# cargo-deny-debug-fail-cases

./: .gitignore
fail0/: Cargo.toml
fail1/second/: Cargo.toml
fail2/: Cargo.toml
fail2/first/: Cargo.toml
fail2/second/: Cargo.toml
fail3/: Cargo.toml  deny.toml
ok/second/: Cargo.toml
