[package]
name = "denysubs"
version = "0.1.0"
authors = ["foresterre <garm@ilumeo.com>"]
edition = "2018"
license-file = "aaa.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# first = { path = "first", version = "0.1.0" }
# second = { path = "second", version = "0.1.0" }

# [workspace]
# members = [
#     "first" ,
#     "second"
# ]